cmake_minimum_required(VERSION 3.20)
project(C__)

set(CMAKE_CXX_STANDARD 20)

# uncomment to run
#add_executable(C__ int_init.cpp)
#add_executable(C__ int_modifiers.cpp)
#add_executable(C__ decimal_types.cpp )
#add_executable(C__  bool_type.cpp )
#add_executable(C__  char_type.cpp )
#add_executable(C__  auto.cpp )
add_executable(C__  assignments.cpp)
